# stores

./: .dockerignore  .drone.yml  .gitignore  Cargo.toml  Dockerfile.pollers  Dockerfile.rocket_retail  Dockerfile.stores  Dockerfile.ticker  Jenkinsfile  README.md
config/: base.toml  development.toml  k8s.toml
docker/: Dockerfile.build  Dockerfile.run  Dockerfile.stores  docker-compose.yml  docker-compose2.yml
docker/kafka_connect/: Dockerfile.kafka_connect_init  init_connectors.sh
migrations/2018-01-29-130000_create_currencies/: down.sql  up.sql
migrations/2018-01-30-100000_create_stores/: down.sql  up.sql
migrations/2018-01-30-100001_create_products/: down.sql  up.sql
migrations/2018-01-31-135736_create_user_roles/: up.sql
migrations/2018-02-25-130000_create_languages/: down.sql  up.sql
migrations/2018-02-25-144700_update_stores/: down.sql  up.sql
migrations/2018-02-25-160000_update_products/: down.sql  up.sql
migrations/2018-02-26-102100_create_attributes/: down.sql  up.sql
migrations/2018-02-26-102201_create_prod_attr_values/: down.sql  up.sql
migrations/2018-02-26-102501_drop_column_category_from_prod/: down.sql  up.sql
migrations/2018-02-27-160000_drop_currencies/: down.sql  up.sql
migrations/2018-02-28-144700_update_stores/: down.sql  up.sql
migrations/2018-02-28-150000_update_products/: down.sql  up.sql
migrations/2018-03-06-104700_update_attributes/: down.sql  up.sql
migrations/2018-03-06-110000_update_prod_attr/: down.sql  up.sql
migrations/2018-03-07-104700_update_attributes/: down.sql  up.sql
migrations/2018-03-07-132100_create_categories/: down.sql  up.sql
migrations/2018-03-07-132201_create_cat_attr_values/: down.sql  up.sql
migrations/2018-03-07-150000_update_products/: down.sql  up.sql
migrations/2018-03-12-120000_update_user_roles/: down.sql  up.sql
migrations/2018-03-12-120001_create_base_products/: down.sql  up.sql
migrations/2018-03-12-120002_update_products/: down.sql  up.sql
migrations/2018-03-14-180000_update_prod_attr/: down.sql  up.sql
migrations/2018-03-20-160002_update_base_product/: down.sql  up.sql
migrations/2018-03-20-180000_update_categories/: down.sql  up.sql
migrations/2018-03-21-120002_update_base_product/: down.sql  up.sql
migrations/2018-03-21-154700_update_attributes/: down.sql  up.sql
migrations/2018-03-22-100000_update_stores/: down.sql  up.sql
migrations/2018-03-25-160000_update_products/: down.sql  up.sql
migrations/2018-03-29-100000_update_products/: down.sql  up.sql
migrations/2018-03-29-190000_update_categories/: down.sql  up.sql
migrations/2018-04-16-120000_update_stores/: down.sql  up.sql
migrations/2018-04-17-120002_update_base_product/: down.sql  up.sql
migrations/2018-04-23-160002_update_base_product/: down.sql  up.sql
migrations/2018-04-23-161000_update_products/: down.sql  up.sql
migrations/2018-05-04-100000_update_product/: down.sql  up.sql
migrations/2018-05-07-102201_create_currency_exchage/: down.sql  up.sql
migrations/2018-05-07-144000_update_currency_exchange/: down.sql  up.sql
migrations/2018-05-08-170300_alter_replica_identity/: down.sql  up.sql
migrations/2018-05-11-100002_update_base_product/: down.sql  up.sql
migrations/2018-05-11-100012_update_store/: down.sql  up.sql
migrations/2018-05-11-110000_create_wizard_store/: down.sql  up.sql
migrations/2018-05-11-174036_create_moderator_product_comments/: down.sql  up.sql
migrations/2018-05-11-174536_create_moderator_store_comments/: down.sql  up.sql
migrations/2018-05-16-125500_update_stores/: down.sql  up.sql
migrations/2018-05-16-165500_update_wizard_stores/: down.sql  up.sql
migrations/2018-05-28-105000_update_stores/: down.sql  up.sql
migrations/2018-05-28-105500_update_wizard_stores/: down.sql  up.sql
migrations/2018-07-17-120900_update_stores/: down.sql  up.sql
migrations/2018-09-18-130043_update_categories/: down.sql  up.sql
migrations/2018-09-18-133121_update_moderator_product_comments/: down.sql  up.sql
migrations/2018-09-18-133253_update_moderator_store_comments/: down.sql  up.sql
migrations/2019-07-17-123000_update_stores/: down.sql  up.sql
migrations/2019-07-19-100000_update_wizard_stores/: down.sql  up.sql
migrations/2019-07-25-120002_update_base_product/: down.sql  up.sql
migrations/2019-07-27-170002_update_stores/: down.sql  up.sql
rocket-retail/: Cargo.toml
rocket-retail/config/: base.toml
rocket-retail/docker/: Dockerfile.rocket-retail  docker-compose.yml
rocket-retail/src/: config.rs  errors.rs  main.rs  models.rs  stores_responses.rs  warehouses_responses.rs
rocket-retail/src/providers/: catalogs.rs  mod.rs  s3.rs
seeds/: attributes.sql  categories.sql  initial_data.sql
src/: app.rs  config.rs  errors.rs  lib.rs  main.rs  schema.rs
tests/: attributes_service_test.rs  base_products_service_test.rs  categories_service_test.rs  client_test.rs  diesel_mock.rs  elastic_test.rs  healthcheck_test.rs  integration_attribute_test.rs  integration_base_product_test.rs  integration_category_test.rs  integration_product_test.rs  integration_stores_test.rs  integration_tests_setup.rs  products_service_test.rs  repo_stores_test.rs  stores_repo_test.rs  stores_service_test.rs  tests_setup.rs  user_roles_service_test.rs
(+192 files in other folders)
