[package]
name = "stores"
version = "0.1.0"

[lib]
name = "stores_lib"
path = "src/lib.rs"

[dependencies]
config = "0.7"
log = "0.4"
env_logger = "0.5.6"
hyper = "0.11"
futures = "0.1.17"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
diesel = { version = "1.2.0", features = ["postgres", "extras"] }
diesel_infer_schema = { version = "1.2.0", features = ["postgres"] }
r2d2 = "0.8.1"
r2d2-diesel = "1.0.0"
validator = "0.6.3"
validator_derive = "0.6.1"
tokio-core = "0.1"
futures-cpupool = "0.1.7"
jsonwebtoken = "4.0.0"
hyper-tls="0.1.3"
chrono = "0.4"
failure = "0.1.1"
lazy_static = "1.0"
isolang="0.2"
stq_acl = { path = "vendor/libstqbackend/acl" }
stq_http = { path = "vendor/libstqbackend/http" }
stq_router = { path = "vendor/libstqbackend/router" }
stq_static_resources = { path = "vendor/libstqbackend/static_resources" }
rand = "*"
