[package]
name = "stores"
version = "0.1.0"

[lib]
name = "stores_lib"
path = "src/lib.rs"

[[bin]]
name = "rocket_retail"
path = "src/bin/rocket_retail.rs"

[[bin]]
name = "stores"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
config = { version = "0.9", default-features = false, features = ["toml"] }
diesel = { version = "1.3.3", features = ["postgres", "extras", "64-column-tables"] }
failure = "0.1.1"
futures = "0.1.17"
futures-cpupool = "0.1.7"
hyper = "0.11"
hyper-tls="0.1.3"
isolang="0.2"
jsonwebtoken = "4.0.0"
lazy_static = "1.0"
log = "0.4"
r2d2 = "0.8.1"
rand = "0.4"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
stq_http = { path = "vendor/libstqbackend/http" }
stq_logging = { path = "vendor/libstqbackend/logging" }
stq_router = { path = "vendor/libstqbackend/router" }
stq_static_resources = { path = "vendor/libstqbackend/static_resources" }
stq_types = { path = "vendor/libstqbackend/types" }
tokio-core = "0.1"
tokio = "0.1.11"
validator = "0.7.1"
validator_derive = "0.7.2"
sentry = "0.12"

# rocket rocket retail
treexml = "0.7.0"
rusoto_core = "0.34"
rusoto_s3 = "0.34"
