[package]
name = "stores"
version = "0.1.0"

[lib]
name = "stores_lib"
path = "src/lib.rs"

[[bin]]
name = "rocket_retail"
path = "src/bin/rocket_retail.rs"

[[bin]]
name = "ticker"
path = "src/bin/ticker.rs"

[[bin]]
name = "stores"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
config = { version = "0.9", default-features = false, features = ["toml"] }
diesel = { version = "1.3.3", features = ["postgres", "extras", "64-column-tables"] }
failure = "0.1.1"
futures = "0.1.17"
futures-cpupool = "0.1.7"
hyper = "0.11"
hyper-tls = "0.1.3"
isolang = "0.2"
jsonwebtoken = "4.0.0"
lazy_static = "1.0"
log = "0.4"
num-traits = "0.2"
r2d2 = "0.8"
r2d2_redis = "0.8"
rand = "0.4"
regex = "0.2"
rust_decimal = "0.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
stq_cache = { path = "vendor/libstqbackend/cache" }
stq_http = { path = "vendor/libstqbackend/http" }
stq_logging = { path = "vendor/libstqbackend/logging" }
stq_router = { path = "vendor/libstqbackend/router" }
stq_static_resources = { path = "vendor/libstqbackend/static_resources" }
stq_types = { path = "vendor/libstqbackend/types" }
stq_diesel_macro_derive = { path = "vendor/libstqbackend/diesel_macro_derive" }
tokio-core = "0.1"
tokio = "0.1.11"
tokio-signal = "0.2.6"
validator = "0.7.1"
validator_derive = "0.7.2"
uuid = { version = "0.6", features = ["use_std", "v4", "serde"] }
sentry = "0.12"

# rocket rocket retail
treexml = "0.7.0"
rusoto_core = "0.34"
rusoto_s3 = "0.34"

# ticker
enum-iter = { git = "https://github.com/StoriqaTeam/enum-iter" }
reqwest = "0.9"
