[package]
name = "rocket-retail"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "rocket-retail"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.9", default-features = false, features = ["toml"] }
failure = "0.1.1"
futures = "0.1.17"
log = "0.4"
reqwest = { version = "0.9.4", features = ["hyper-011"] }
rusoto_core = "0.34"
rusoto_s3 = "0.34"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
stq_static_resources = { path = "../vendor/libstqbackend/static_resources" }
stq_types = { path = "../vendor/libstqbackend/types" }
tokio = "0.1.11"
tokio-core = "0.1"
tokio-signal = "0.2.6"
treexml = "0.7.0"
uuid = { version = "0.6", features = ["use_std", "v4", "serde"] }

#stq_cache = { path = "../vendor/libstqbackend/cache" }
#stq_http = { path = "../vendor/libstqbackend/http" }
#stq_logging = { path = "../vendor/libstqbackend/logging" }
#stq_router = { path = "../vendor/libstqbackend/router" }
#stq_diesel_macro_derive = { path = "../vendor/libstqbackend/diesel_macro_derive" }
#diesel = { version = "1.3.3", features = ["postgres", "extras", "64-column-tables"] }
#futures-cpupool = "0.1.7"
#hyper = "0.11"
#hyper-tls = { git = "https://github.com/storiqateam/hyper-tls", rev = "f71d7dc50dcc916f16e83b6b612b259c456b2646" }
#isolang = "0.2"
#jsonwebtoken = "4.0.0"
#lazy_static = "1.0"
#log = "0.4"
#num-traits = "0.2"
#r2d2 = "0.8"
#r2d2_redis = "0.8"
#rand = "0.4"
#regex = "0.2"
#rust_decimal = "0.10"
#validator = "0.8"
#validator_derive = "0.8"
#sentry = "0.12"
